gateway/ingress/lb_dashboard_service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard-1
  name: dashboard-1
  namespace: kube-system
spec:
  # Type: NodePort
  type: LoadBalancer
  loadBalancerIP: 10.64.3.7
  ports:
  - port: 8001
    targetPort: 9090
  selector:
    k8s-app: kubernetes-dashboard
